Menambah paragraf di index.html

--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <h3>Hai</h3>
+
+    <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere, distinctio!
+    </p>
 </body>
 </html>
