Menambahkan judul di index.html

--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <p>
         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere, distinctio!
     </p>
+    <h2>Mending bubuk aja</h2>
 </body>
 </html>
